Switched MemberController to use MemberService instead of MemberLookup. Cleaned up EnsembleSummaryView.